Layout/Content/css/layout.css
/* General */
.clear
{
    clear: both;
}
.tal
{
	text-align: left;
}
.tar
{
	text-align: right;
}
.tac
{
	text-align: center;
}
.fl
{
	float: left;
}
.fr
{
	float: right;
}
/* Layout */
html
{
	overflow-y: scroll;
}
body
{
	margin: 0em;
	background: #333;
}
.AREA_SHADOW
{
	position: absolute;
	width: 100%;
	height: 0.5em;
	top: -0.5em;
	box-shadow: 0em 0em 25em 5em #666;
}
.AREA_WRAPPER
{
	position: relative;
    font: normal 12px Arial,Verdana;
    width: 70em;
    border-bottom-left-radius: 0.5em;
    border-bottom-right-radius: 0.5em;
	margin: auto;
	box-shadow: 0em 0em 1.0em #000;
	overflow: hidden;
}
.AREA_BANNER, .AREA_NAV, .AREA_CONTENT
{
	position: relative;
	display: inline-block;
	float: left;
	width: 100%;
}
.AREA_BANNER
{
	height: 5em;
	line-height: 4em;
	background: #45484d; /* Old browsers */
	background: -moz-linear-gradient(top,  #45484d 0%, #000000 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#45484d), color-stop(100%,#000000)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top,  #45484d 0%,#000000 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top,  #45484d 0%,#000000 100%); /* Opera 11.10+ */
	background: -ms-linear-gradient(top,  #45484d 0%,#000000 100%); /* IE10+ */
	background: linear-gradient(to bottom,  #45484d 0%,#000000 100%); /* W3C */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45484d', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
}
.AREA_BANNER .C1
{
	color: #06C;
}
.AREA_BANNER .C2
{
	color: #CCC;
}
.AREA_BANNER .C3
{
	color: white;
}
.AREA_BANNER h1
{
	color: #FFF;
	font-weight: normal;
	margin: 0.5em;
}
.AREA_BANNER img
{
	width: 100%;
	height: 100%;
}
.AREA_BANNER .AUTH
{
	display: inline-block;
	height: 2em;
	line-height: 2em;
	float: right;
	padding: 0.25em 0.5em;
	margin: 0.5em;
	background: rgba(0, 0, 0, 0.4);
	border-radius: 0.5em;
	box-shadow: 0em 0em 0.5em rgba(0, 0, 0, 0.5);
	border: solid 0.1em rgba(0, 0, 0, 0.1);
}
.AREA_BANNER .AUTH a, .AREA_BANNER .AUTH span
{
	float: left;
	color: #FFF;
	text-decoration: none;
}
.AREA_BANNER .AUTH span
{
	color: #CCC;
}
.AREA_BANNER .AUTH a:hover, .AREA_BANNER .AUTH a:focus
{
	color: #999;
}
.AREA_BANNER .AUTH img
{
	width: 1.33em;
	height: 1.33em;
	vertical-align: middle;
	border: none;
}
.AREA_NAV
{
	height: 2em;
	z-index: 2;
	background: #CCC;
	font-size: small;
}
.AREA_NAV .ITEM
{
	float: left;
	height: 2em;
	overflow: hidden;
}
.AREA_NAV .ITEM:hover, .AREA_NAV .ITEM:focus
{
	overflow: visible;
}
.AREA_NAV .SEP, .AREA_BANNER .SEP
{
	float: left;
	margin: 0.5em;
	width: 0.2em;
	background: #CCC;
	height: 1em;
}
.AREA_NAV .ITEM:hover, .AREA_NAV .ITEM:focus
{
	background: #999;
}
.AREA_NAV .ITEM .SUBITEMS
{
	float: left;
	width: 100%;
	background: #CCC;
	box-shadow: 0em 0.2em 0.5em -0.2em #000;
}
.AREA_NAV .ITEM a
{
	display: block;
	height: 1em;
	padding: 0.5em;
	line-height: 1em;
	text-decoration: none;
	color: #333;
}
.AREA_NAV .ITEM a:hover, .AREA_NAV .ITEM a:focus
{
	background: #999;
}
.AREA_CONTENT
{
	background: #FFF;
	min-height: 40em;
	z-index: 1;
}
.AREA_CONTENT p
{
	margin: 0.5em 1em 1em 1em;
	color: #333;
	font-size: small;
}
.AREA_CONTENT p a, .AREA_CONTENT .TABLE a
{
	color: #06C;
}
.AREA_CONTENT p a:hover, .AREA_CONTENT p a:focus
{
	color: #999;
}
.AREA_CONTENT h2
{
	padding: 0em;
	margin: 0.25em;
	color: #333;
	font-weight: normal;
	font-size: x-large;
}
.AREA_CONTENT h3
{
	font-size: small;
	border-bottom: dotted 0.1em #999;
	margin: 0.5em;
	padding: 0em;
	color: #333;
	font-size: medium;
	color: #06C;
}
.AREA_CONTENT h4
{
	margin: 0em 1em;
}
.FOOTER
{
	font: normal small Arial;
	text-align: center;
}
.FOOTER, .FOOTER a
{
	color: #666;
}
.FOOTER a:focus, .FOOTER a:hover
{
	color: #06C;
}
/* Table - Data */
.AREA_CONTENT table
{
	border: solid 0.1em #333;
	border-radius: 0.5em;
	border-collapse: collapse;
	margin: 0.5em auto;
	box-shadow: 0em 0em 0.5em #000;
}
.AREA_CONTENT table tr:nth-child(even)
{
	background: #CCC;
}
.AREA_CONTENT table th, .AREA_CONTENT table td
{
	padding: 0.5em;
	border: solid 0.1em #333;
}
.AREA_CONTENT table th, .TABLE .HEADER
{
	background: #000;
	color: #FFF;
}
/* Table - Layout */
.TABLE
{
    display: block;
	margin: auto;
	margin-bottom: 0.5em;
	overflow: hidden;
	font-size: small;
	padding: 0.5em;
}
.TABLE .ROW
{
    display: block;
}
.TABLE .ROW .CELL, .TABLE .ROW .CELL1, .TABLE .ROW .CELL2, .TABLE .ROW .CELL3, .TABLE .ROW .CELL4
{
    vertical-align: middle;
    display: inline-block;
    float: left;
}
.TABLE .ROW .P
{
	padding: 0.5em;
}
.TABLE .ROW .CELL1
{
    width: 100%;
}
.TABLE .ROW .CELL2
{
    width: 50%;
}
.TABLE .ROW .CELL3
{
    width: 33.33%;
}
.TABLE .ROW .CELL4
{
    width: 25%;
}
.TABLE input, .BUTTON
{
	font-size: small;
}
.TABLE input[type=submit], .BUTTON
{
	padding: 0.25em 0.5em;
	border-radius: 0.25em;
}
.TABLE input[type=text], .TABLE input[type=password], .TEXTBOX
{
	border: solid 0.1em #CCC;
	background: #FFF;
	box-shadow: 0em 0em 0.5em #CCC;
	padding: 0.25em 0.5em;
	box-sizing: border-box;
}
.TABLE input[type=text]:hover, .TABLE input[type=text]:focus, .TABLE input[type=password]:hover, .TABLE input[type=password]:focus, .TEXTBOX:hover, .TEXTBOX:focus
{
	background: #EEE;
	box-shadow: inset 0em 0em 0.5em #CCC, 0em 0em 0.5em #CCC;
}
.TABLE ::-webkit-input-placeholder
{
	color: #888;
}
.TABLE ::-moz-placeholder
{
	color: #888;
}
.TABLE :-ms-input-placeholder
{
	color: #888;
}
.TABLE input[type=submit], .BUTTON
{
	display: inline-block;
	border: none;
	color: #FFF !important;
	box-shadow: 0em 0em 0.3em #333;
	text-decoration: none;
	margin: 0em 0.5em 0.25em 0em;
	font: inherit;
	
	background: #333; /* Old browsers */
	background: -moz-linear-gradient(top,  #666666 0%, #333333 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#666666), color-stop(100%,#333333)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top,  #666666 0%,#333333 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top,  #666666 0%,#333333 100%); /* Opera 11.10+ */
	background: -ms-linear-gradient(top,  #666666 0%,#333333 100%); /* IE10+ */
	background: linear-gradient(to bottom,  #666666 0%,#333333 100%); /* W3C */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#666666', endColorstr='#333333',GradientType=0 ); /* IE6-9 */
}
.TABLE input[type=submit]:hover, .TABLE input[type=submit]:focus, .BUTTON:hover, .BUTTON:focus
{
	color: #333 !important;
	cursor: pointer;
	
	background: #CCC; /* Old browsers */
	background: -moz-linear-gradient(top,  #e5e5e5 0%, #cccccc 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#e5e5e5), color-stop(100%,#cccccc)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top,  #e5e5e5 0%,#cccccc 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top,  #e5e5e5 0%,#cccccc 100%); /* Opera 11.10+ */
	background: -ms-linear-gradient(top,  #e5e5e5 0%,#cccccc 100%); /* IE10+ */
	background: linear-gradient(to bottom,  #e5e5e5 0%,#cccccc 100%); /* W3C */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e5e5e5', endColorstr='#cccccc',GradientType=0 ); /* IE6-9 */
}
/* Checkbox Control */
.TABLE .checkbox
{
	position: relative;
	display: inline-block;
	width: 16em;
	height: 2em;
	line-height: 2em;
	border: solid 0.1em #CCC;
	border-radius: 0.5em;
	box-shadow: 0em 0em 0.5em #CCC;
	cursor: pointer;
}
.TABLE .checkbox:before, .TABLE .checkbox label, .TABLE .checkbox:after
{
	position: absolute;
	text-align: center;
}
.TABLE .checkbox:before, .TABLE .checkbox:after
{
	z-index: 0;
	width: 8em;
}
.TABLE .checkbox:before
{
	content: 'Off';
	color: #900;
	background: #FCC; /* Old browsers */
	background: -moz-linear-gradient(top,  #ff8c8c 0%, #ffcccc 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ff8c8c), color-stop(100%,#ffcccc)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top,  #ff8c8c 0%,#ffcccc 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top,  #ff8c8c 0%,#ffcccc 100%); /* Opera 11.10+ */
	background: -ms-linear-gradient(top,  #ff8c8c 0%,#ffcccc 100%); /* IE10+ */
	background: linear-gradient(to bottom,  #ff8c8c 0%,#ffcccc 100%); /* W3C */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff8c8c', endColorstr='#ffcccc',GradientType=0 ); /* IE6-9 */
}
.TABLE .checkbox:after
{
	left: 8em;
	content: 'On';
	color: #060;
	background: #9F9; /* Old browsers */
	background: -moz-linear-gradient(top,  #56ff56 0%, #c1ffc1 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#56ff56), color-stop(100%,#c1ffc1)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top,  #56ff56 0%,#c1ffc1 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top,  #56ff56 0%,#c1ffc1 100%); /* Opera 11.10+ */
	background: -ms-linear-gradient(top,  #56ff56 0%,#c1ffc1 100%); /* IE10+ */
	background: linear-gradient(to bottom,  #56ff56 0%,#c1ffc1 100%); /* W3C */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#56ff56', endColorstr='#c1ffc1',GradientType=0 ); /* IE6-9 */
}
.TABLE .checkbox label
{
	display: block;
	position: absolute;
	width: 10em;
	z-index: 1;
	-webkit-transition:	all .4s ease;
	-moz-transition: 	all .4s ease;
	-o-transition:		all .4s ease;
	-ms-transition:		all .4s ease;
	transition:			all .4s ease;
	cursor: pointer;
	background: #FFF;
	margin-left: 5.5em;
	border: solid 0.1em #CCC;
	border-top: none;
	border-bottom: none;
}
.TABLE .checkbox input[type=checkbox]
{
	border: solid 0.1em #CCC;
	border-radius: 0.5em;
	display: none;
}
.TABLE .checkbox input[type=checkbox]:checked ~ label
{
	margin-left: 0.5em;
}
/* Error Box */
.ERROR, .SUCCESS
{
	padding: 0.5em;
}
.ERROR
{
	background: #FCC;
	border: solid 0.2em #F00;
	color: #F00 !important;
}
.SUCCESS
{
	background: #9F9;
	border: solid 0.2em #060;
	color: #060 !important;
}

